--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- header start -->
     <header>
         <nav>
             <h3 class="nav-title">G3 Architects</h3>
@@ -32,6 +33,28 @@
 
         </div>
     </header>
+    <!-- header end -->
+    <!-- team section start -->
+    <main>
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+
+            </div>
+            <div class="teams-content">
+                <h3 class="teams-title"><span class="quick">Quick list</span> <span class="of-our">of Our</span> <span
+                        class="features">Features</span></h3>
+                <p class="teams-description">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
