--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects </h1>
-                <p class="banner-description">
+                <p class="text-description">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
@@ -47,7 +47,7 @@
             <div class="teams-content">
                 <h3 class="teams-title"><span class="quick">Quick list</span> <span class="of-our">of Our</span> <span
                         class="features">Features</span></h3>
-                <p class="teams-description">
+                <p class="text-description">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
