--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer">
+            <h5>All rights reserved copyright@2023 startup landing page design</h5>
+        </div>
+    </footer>
 </body>
 
 </html>
