changed something by transform css

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
                         alteration in some form, by injected humour, or randomised...........
                     </p>
                 </div>
-                <!-- <div class="card">
+                <div class="card">
                     <h4 class="cards-title">Dexktop & Mobile Version</h4>
                     <p class="text-light-grey">
                         There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form, by injected humour, or randomised...........
                     </p>
-                </div> -->
+                </div>
 
             </div>
             <div class="feature-img">
